--- a/Bing Downloader/Bing Downloader.csproj
+++ b/Bing Downloader/Bing Downloader.csproj
@@ -53,10 +53,19 @@
     <Compile Include="formBing.Designer.cs">
       <DependentUpon>formBing.cs</DependentUpon>
     </Compile>
+    <Compile Include="formPreview.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="formPreview.Designer.cs">
+      <DependentUpon>formPreview.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="formBing.resx">
       <DependentUpon>formBing.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="formPreview.resx">
+      <DependentUpon>formPreview.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -68,6 +77,7 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <None Include="app.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
